kubernetes/k3s/apps/media/stump/chart/templates/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stump-api
spec:
  hostnames:
    - stump.plexmox.com
  rules:
    - backendRefs:
        - kind: Service
          name: stump
          port: 10801
      matches:
        - path:
            type: PathPrefix
            value: /opds/v1.2/catalog
        - path:
            type: PathPrefix
            value: /opds/v2.0/catalog
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: gateways
